# tencentcloud-cls-sdk-cpp

./: CMakeLists.txt  README.md  RestfulApiCommon.h  adapter.cpp  adapter.h  batchloggroup.cpp  batchloggroup.h  client.cpp  cls_logs.proto  error.h  logaccumulator.cpp  logaccumulator.h  logproducerconfig.pb.cc  logproducerconfig.pb.h  logproducerconfig.proto  logretryqueue.cpp  logthreadpool.cpp  logtimer.h  producerclient.cpp  producerclient.h  result.h  sample.cpp  signature.cpp  signature.h  syncsample.cpp  utils.cpp
cls/: RestfulApiCommon.h  adapter.cpp  batchloggroup.cpp  batchloggroup.h  client.cpp  client.h  cls_logs.pb.cc  cls_logs.pb.h  common.cpp  common.h  error.h  logaccumulator.cpp  logaccumulator.h  logmemmgr.cpp  logmemmgr.h  logproducerconfig.pb.cc  logretryqueue.cpp  logretryqueue.h  logthreadpool.cpp  logthreadpool.h  logtimer.cpp  logtimer.h  sample.cpp  signature.cpp  syncsample.cpp  utils.h
cls/util/: lock.h  thread_rwlock.cpp  thread_rwlock.h
test/: CMakeLists.txt  tencentclssdk_benchmark.cpp  tencentclssdk_test.cpp
